--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "@react-google-maps/api": "^2.1.0",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.8.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "google-auth-library": "^6.1.3",
+    "google-maps-react": "^2.0.6",
     "mongoose": "^5.11.9",
     "nodemon": "^2.0.6",
     "react": "^16.14.0",
