--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.10.6",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/pickers": "^3.2.10",
     "@reach/router": "^1.3.4",
     "@react-google-maps/api": "^2.1.0",
     "connect-ensure-login": "^0.1.1",
@@ -35,6 +38,7 @@
     "react-dom": "^16.14.0",
     "react-google-login": "^5.2.1",
     "react-map-gl": "^6.0.3",
+    "react-mapbox-autocomplete": "^0.2.3",
     "react-router-dom": "^5.2.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1",
