--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-google-maps/api": "^2.1.0",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.8.1",
+    "d3-ease": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -35,6 +36,7 @@
     "mongoose": "^5.11.9",
     "nodemon": "^2.0.6",
     "react": "^16.14.0",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^16.14.0",
     "react-google-login": "^5.2.1",
     "react-map-gl": "^6.0.3",
