--- a/package.json
+++ b/package.json
@@ -32,11 +32,16 @@
     "express-session": "^1.17.1",
     "google-auth-library": "^6.1.3",
     "google-maps-react": "^2.0.6",
+    "install": "^0.13.0",
     "mapbox-gl": "^2.0.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.9",
     "nodemon": "^2.0.6",
+    "npm": "^6.14.11",
     "react": "^16.14.0",
     "react-d3-library": "^1.1.8",
+    "react-datetime": "^3.0.4",
+    "react-datetime-picker": "^3.0.4",
     "react-dom": "^16.14.0",
     "react-google-login": "^5.2.1",
     "react-map-gl": "^6.0.3",
