--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^2.10.6",
+    "@leveluptuts/fresh": "^0.2.17",
     "@material-ui/core": "^4.11.3",
     "@material-ui/pickers": "^3.2.10",
     "@reach/router": "^1.3.4",
